{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e76186b7-49b2-4257-afa8-8b4451720541",
            "actions": [
                {
                    "name": "UfoMovement",
                    "type": "Value",
                    "id": "7fd7e03f-6d63-4fc9-a65d-b24d974f74be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "52c3788d-315f-4d2f-ad46-a72b0123c0b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SphereRotateByClockWise",
                    "type": "Button",
                    "id": "bd702986-5a5c-42ba-bf7d-f6f6f6546d34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UfoAddForce",
                    "type": "Button",
                    "id": "a51eaa97-631f-452d-bc8a-a89bcf9928ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UfoAddGravity",
                    "type": "Button",
                    "id": "d620fd0f-8912-4d7a-8429-f5266e463669",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SphereRotateCounterClockWise",
                    "type": "Button",
                    "id": "faec6d6e-f59e-4a01-868b-88b08f914fbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "672c76bc-9155-48b3-bfea-8b00434ad494",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UfoMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "f64c372b-d5e5-4446-aa58-decfb2ac5ebb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UfoMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b7d371eb-e561-4acd-9cd2-e852dc86b631",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UfoMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f122ea65-610f-415c-8c3a-ea796f135102",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a15f42d1-fd53-49b6-8f9c-0744b54e7c96",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UfoAddGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16aac5aa-384e-468c-a245-a1f967020c80",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SphereRotateCounterClockWise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "948ba80f-bf87-4ec0-a65d-1dd028e2d83c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SphereRotateByClockWise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebfe7a72-ea37-45a8-af27-1447caf0ec07",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UfoAddForce",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UImenu",
            "id": "2f642da8-e1ab-4c3e-be19-0f1fb09a86fa",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e6c6da17-dc23-4a4b-a28d-e97711d26619",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9466466a-d40f-40b2-949d-8440b1b3bd7f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Environment",
            "id": "663e8e17-60d5-49fa-92ba-f362906f0026",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "92460d23-a332-4794-823b-60868d8f7bed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e718d33c-38d6-4950-8ebc-63f5e9cb1492",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}